Fixed bug with client info visibility.

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    font-family: Arial, sans-serif;
-    background-color: rgb(255, 231, 200)
+    min-height: 100vh;        
 }
+
+/*Styles de welcome*/
