--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -43,7 +43,7 @@
     color: #fff;
     border: none;
     border-radius: 5px;
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.3s ease;
